--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - ./travis-tool.sh github_package gaborcsardi/progress
   - ./travis-tool.sh github_package ropensci/RedisAPI
   - ./travis-tool.sh github_package richfitz/redux
-  - ./travis-tool.sh github_package richfitz/RedisHeartbeat
+  - ./travis-tool.sh github_package mrc-ide/heartbeatr
   - ./travis-tool.sh github_package richfitz/storr
   - ./travis-tool.sh github_package richfitz/ids
 
